[gd_scene load_steps=19 format=3 uid="uid://c77w1mfx07mnr"]

[ext_resource type="Script" path="res://scripts/MovingBlock.gd" id="1_ajo5s"]
[ext_resource type="Texture2D" uid="uid://dosqkfo6l4pm4" path="res://assets/Rock Head/Idle.png" id="1_imseo"]
[ext_resource type="Texture2D" uid="uid://rw2itigenhq5" path="res://assets/Rock Head/Right Hit (42x42).png" id="2_o71gv"]
[ext_resource type="Texture2D" uid="uid://duixvf2rlxg0r" path="res://assets/Rock Head/Bottom Hit (42x42).png" id="3_1cj2b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_up6kk"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x73t"]
atlas = ExtResource("2_o71gv")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5x6t"]
atlas = ExtResource("2_o71gv")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_npw7u"]
atlas = ExtResource("2_o71gv")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_amv0g"]
atlas = ExtResource("2_o71gv")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_46twx"]
atlas = ExtResource("3_1cj2b")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w6vf"]
atlas = ExtResource("3_1cj2b")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qcre"]
atlas = ExtResource("3_1cj2b")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rf2i"]
atlas = ExtResource("3_1cj2b")
region = Rect2(126, 0, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_fu7ow"]
animations = [{
"frames": [ExtResource("1_imseo")],
"loop": true,
"name": &"default",
"speed": 20.0
}, {
"frames": [SubResource("AtlasTexture_1x73t"), SubResource("AtlasTexture_q5x6t"), SubResource("AtlasTexture_npw7u"), SubResource("AtlasTexture_amv0g")],
"loop": true,
"name": &"x_hit",
"speed": 20.0
}, {
"frames": [SubResource("AtlasTexture_46twx"), SubResource("AtlasTexture_1w6vf"), SubResource("AtlasTexture_2qcre"), SubResource("AtlasTexture_3rf2i")],
"loop": true,
"name": &"y_hit",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82shy"]
size = Vector2(27, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7gdy"]
size = Vector2(30, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q41yg"]
size = Vector2(26, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2dxh"]
size = Vector2(26, 29)

[node name="MovingBlock" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_ajo5s")
directions_array = [Vector2(0, 0)]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_up6kk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
frames = SubResource("SpriteFrames_fu7ow")
playing = true

[node name="RightCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCollision"]
position = Vector2(3.5, -0.5)
shape = SubResource("RectangleShape2D_82shy")

[node name="LeftCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCollision"]
position = Vector2(-2, -0.5)
shape = SubResource("RectangleShape2D_j7gdy")

[node name="DownCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownCollision"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_q41yg")

[node name="UpCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpCollision"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_v2dxh")

[connection signal="body_entered" from="RightCollision" to="." method="_on_right_collision_body_entered"]
[connection signal="body_entered" from="LeftCollision" to="." method="_on_left_collision_body_entered"]
[connection signal="body_entered" from="DownCollision" to="." method="_on_down_collision_body_entered"]
[connection signal="body_entered" from="UpCollision" to="." method="_on_up_collision_body_entered"]
